--- a/app/src/main/res/layout/activity_kelvin_conversion.xml
+++ b/app/src/main/res/layout/activity_kelvin_conversion.xml
@@ -7,46 +7,46 @@
     tools:context=".CelsiusConversion">
 
     <Button
-        android:id="@+id/fahrenheitToCelsiusConvertButton"
+        android:id="@+id/kelvinToFahrenheitConvButton"
+        android:layout_width="156dp"
+        android:layout_height="100dp"
+        android:text="@string/Fahrenheit"
+        app:layout_constraintBottom_toTopOf="@+id/answerField"
+        app:layout_constraintEnd_toStartOf="@+id/kelvinToCelConvButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chooseUnitConvCel" />
+
+    <Button
+        android:id="@+id/kelvinToCelConvButton"
         android:layout_width="156dp"
         android:layout_height="100dp"
         android:text="@string/Celsius"
-        app:layout_constraintBottom_toTopOf="@+id/answerFieldFahrDegree"
-        app:layout_constraintEnd_toStartOf="@+id/fahrenheitToKelvinConvertButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chooseUnitFah" />
-
-    <Button
-        android:id="@+id/fahrenheitToKelvinConvertButton"
-        android:layout_width="156dp"
-        android:layout_height="100dp"
-        android:text="@string/Kelvin"
-        app:layout_constraintBottom_toTopOf="@+id/answerFieldFahrDegree"
+        app:layout_constraintBottom_toTopOf="@+id/answerField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/fahrenheitToCelsiusConvertButton"
-        app:layout_constraintTop_toBottomOf="@+id/chooseUnitFah" />
+        app:layout_constraintStart_toEndOf="@+id/kelvinToFahrenheitConvButton"
+        app:layout_constraintTop_toBottomOf="@+id/chooseUnitConvCel" />
 
     <TextView
-        android:id="@+id/chooseUnitFah"
+        android:id="@+id/chooseUnitConvCel"
         android:layout_width="156dp"
         android:layout_height="53dp"
-        android:text="@string/FahrenheitConversionQuery"
+        android:text="@string/KelvinConversionQuery"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#4C5DB8"
         android:textSize="15sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/answerFieldFahrDegree"
+        app:layout_constraintBottom_toTopOf="@+id/answerField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/numberToConvertFahrDegree"
+        app:layout_constraintTop_toBottomOf="@+id/numberToConvert"
         app:layout_constraintVertical_bias="0.201" />
 
     <EditText
-        android:id="@+id/numberToConvertFahrDegree"
+        android:id="@+id/numberToConvert"
         android:layout_width="316dp"
         android:layout_height="47dp"
         android:layout_marginTop="16dp"
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/answerFieldFahrDegree"
+        android:id="@+id/answerField"
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="140dp"
