--- a/app/src/main/res/layout/activity_weight_volume_menu.xml
+++ b/app/src/main/res/layout/activity_weight_volume_menu.xml
@@ -44,7 +44,7 @@
         android:id="@+id/gallonButton"
         android:layout_width="156dp"
         android:layout_height="100dp"
-        android:text="@string/Gallons"
+        android:text="@string/Gallon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
