--- a/app/src/main/res/layout/activity_distance_menu.xml
+++ b/app/src/main/res/layout/activity_distance_menu.xml
@@ -12,7 +12,7 @@
         android:layout_width="156dp"
         android:layout_height="100dp"
         android:text="@string/Kilometer"
-        app:layout_constraintBottom_toTopOf="@+id/nauticalMileButton"
+        app:layout_constraintBottom_toTopOf="@+id/mileButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
